--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-typewriter",
-  "version": "2.2.1",
+  "name": "vue-typewriter-again",
+  "version": "2.3",
   "description": "Vue Component that types.",
   "main": "dist/typewriter.js",
   "scripts": {
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eduardostuart/vue-typewriter.git"
+    "url": "https://github.com/jamaluddinrumi/vue-typewriter-again.git"
   },
   "bugs": {
-    "url": "https://github.com/eduardostuart/vue-typewriter/issues"
+    "url": "https://github.com/jamaluddinrumi/vue-typewriter-again/issues"
   },
-  "homepage": "https://eduardostuart.github.io/vue-typewriter",
+  "homepage": "https://github.com/jamaluddinrumi/vue-typewriter-again/",
   "keywords": [
     "vue",
     "typewriter",
     "vue-typewriter"
   ],
-  "author": "Eduardo Stuart",
+  "author": "Jamaluddin Rumi",
   "license": "MIT",
   "dependencies": {
     "vue": "^2.5.3"
